--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -17,7 +17,7 @@ $display-font-weight: 700;
 
 $enable-responsive-font-sizes: true;
 
-$enable-rounded: false;
+$enable-rounded: true;
 
 $border-color: rgba(256, 256, 256, .1);
 
